--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,31 @@
 plugins {
-    id 'java'
-    id 'org.jetbrains.intellij' version '1.0'
+    id "java"
+    id "org.jetbrains.kotlin.jvm" version "1.5.30"
+    id "org.jetbrains.intellij" version "1.1.4"
 }
+
+apply plugin: "kotlin"
+apply plugin: "org.jetbrains.intellij"
 
 group 'lechuck'
 version '1.1.0'
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
@@ -19,6 +34,7 @@ dependencies {
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
     version = '2021.2.1'
+    updateSinceUntilBuild = false
 }
 
 buildSearchableOptions {
