--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,11 @@
     ]]></description>
 
     <change-notes><![CDATA[
+    v1.2.0
+    <ul>
+      <li>add working directory</li>
+      <li>add environment variables</li>
+    </ul>
     v1.1.0
     <ul>
       <li>add task executable path</li>
