--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,11 @@
     ]]></description>
 
     <change-notes><![CDATA[
+    v1.2.1
+    <ul>
+        <li>fix: failed to execute if taskfile is empty</li>
+        <li>set default task path: `/opt/homebrew/bin/task`</li>
+    </ul>
     v1.2.0
     <ul>
       <li>add working directory</li>
